Fix some alignments and adjustments

--- a/src/styles.css
+++ b/src/styles.css
@@ -47,11 +47,11 @@
 }
 
 .hipo-footer {
-    @apply mx-auto mb-16 w-full gap-4 px-4 sm:max-w-screen-sm md:mb-36 md:max-w-screen-xl md:gap-8;
+    @apply mx-auto mb-16 w-full gap-4 px-4 sm:max-w-screen-sm md:mb-36 md:max-w-screen-lg md:gap-8;
 }
 
 .hipo-cards-list {
-    @apply grid w-full grid-cols-1 gap-4 sm:grid-cols-2 md:max-w-screen-xl lg:px-16;
+    @apply grid w-full grid-cols-1 gap-4 sm:grid-cols-2 md:max-w-screen-lg;
 }
 
 .hipo-card {
